--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="oy8dnvjxk40v4kt7u9d9vmfwmsu76v" />
+    <title>Document</title>
+</head>
+<body>
+CVPD BAYSIDE LLC
+30 JELLIFF LN, SOUTHPORT, CT 06890
+</body>
+</html>
+
